--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.25",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.556.0",
+    "motion": "^12.23.25",
     "next": "16.0.7",
     "next-themes": "^0.4.6",
     "next-view-transitions": "^0.3.5",
