--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@types/mdx": "^2.0.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.25",
+    "fumadocs-core": "^16.2.4",
+    "fumadocs-mdx": "^14.1.0",
+    "fumadocs-ui": "^16.2.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.556.0",
     "motion": "^12.23.25",
